# power-law-fisher-info

./: LICENSE  README.md  pyproject.toml
figs/: plot.ipynb
figs/output/: fig2.eps  fig3.eps  fig5.eps  figS2.eps  figure_5.eps
power_law_fisher_info/: utils.py
