[project]
dependencies = [
  "matplotlib>=3.10.3",
  "numpy>=2.2.5",
  "pandas>=2.2.3",
  "scipy>=1.15.3",
]
description = "Add your description here"
name = "power-law-fisher-info"
readme = "README.md"
requires-python = ">=3.12"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.build.targets.wheel]
packages = ["power_law_fisher_info"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
  "E", # pycodestyle errors
  "F", # pyflakes
  "I", # isort
  "B", # flake8-bugbear
  "C4", # flake8-comprehensions
  "UP", # pyupgrade
]

[tool.ruff.format]
indent-style = "space"
line-ending = "auto"
quote-style = "double"

[dependency-groups]
dev = [
  "jupyterlab>=4.4.2",
  "ruff>=0.11.9",
]
